--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ task zip(type: Zip) {
 		include "routes/**"
 		include "views/**"
 	}
-	destinationDir(file("dist"))
+	destinationDir(file("/var/lib/jenkins/workspace/CI_CD_PROJECT/dist"))
 	baseName "trainSchedule"
 }
 
