--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,10 @@ task zip(type: Zip) {
 		include "routes/**"
 		include "views/**"
 	}
-	destination file("/var/lib/jenkins/workspace/CI_CD_PROJECT/dist")
-	baseName "trainSchedule"
+	//destination file("/var/lib/jenkins/workspace/CI_CD_PROJECT/dist")
+	//baseName "trainSchedule"
+	archiveBaseName = "trainSchedule"
+        destinationDirectory = file("/var/lib/jenkins/workspace/CI_CD_PROJECT/dist")
 }
 
 //declare task dependencies
