--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-  //inlude the nodeJS plugin to execute nodejs and npm tasks
-  id "com.moowork.node" version "1.3.1"
+  id "com.github.node-gradle.node" version "3.1.1"
 }
-
+//apply plugin: "com.moowork.node"
 node {
 	download = true
 	version = "12.18.3"
